tests/ui/suggestions/type-ascription-instead-of-path.rs
fn main() {
    std:io::stdin();
    //~^ ERROR failed to resolve: use of undeclared crate or module `io`
    //~| ERROR expected value, found crate
}
